# upwosh

./: Cargo.toml
logs/: upwosh.log.2024-08-25-13
src/: main.rs
src/data/model/: app_state.rs
src/middleware/: auth_middleware.rs
src/routes/: app_routes.rs
src/test/: endpoint_test.rs  mod.rs
