[package]
name = "upwosh"
version = "0.1.0"
edition = "2021"

[dependencies]

# WEBSERVER
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.4", features = ["macros", "multipart"] }

# HTTP CLIENT
reqwest = { version = "0.12.7", features = ["json"] }

# SERIALIZATION AND DESERIALIZATION
serde = { version= "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# LOGGING
tracing = "0.1.4"
tracing-subscriber = {version= "0.3.18" , features = ["std", "env-filter"]}
tracing-appender = "0.2.3"

# SCHEDULER
clokwerk = "0.4.0"

# WEBSCRAPING

